Adding github link

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div id="palette_change_plus"></div>
     </div>
   </div>
+  <a href="https://github.com/AdrianoMoura/GameBoyCameraJS" id="github">Adriano Moura &bull; https://github.com/AdrianoMoura/GameBoyCameraJS</a>
 </body>
 
 </html>
