--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8" />
 
@@ -18,7 +18,8 @@
       <div id="palette_change_plus"></div>
     </div>
   </div>
-  <a href="https://github.com/AdrianoMoura/GameBoyCameraJS" id="github">Adriano Moura &bull; https://github.com/AdrianoMoura/GameBoyCameraJS</a>
+  <a href="https://github.com/AdrianoMoura/GameBoyCameraJS" id="github">Adriano Moura &bull;
+    https://github.com/AdrianoMoura/GameBoyCameraJS</a>
 </body>
 
 </html>
